added tweaks specific to intern hacks

--- a/client/components/ticketPanel/ticketPanel.html
+++ b/client/components/ticketPanel/ticketPanel.html
@@ -65,14 +65,14 @@
                      name="topic"
                      class="clean"
                      placeholder="{{constant 'TICKET_PANEL_TOPIC_PLACEHOLDER'}}">
-              <br>
+              <!-- <br>
               {{constant 'TICKET_PANEL_LOCATION'}}
               <br>
               <input id="location"
                      type="text"
                      name="location"
                      class="clean"
-                     placeholder="{{constant 'TICKET_PANEL_LOCATION_PLACEHOLDER'}}">
+                     placeholder="{{constant 'TICKET_PANEL_LOCATION_PLACEHOLDER'}}"> -->
               <br>
               {{constant 'TICKET_PANEL_CONTACT'}}
               <br>
