added more placeholder for skills

--- a/client/components/userEdit/userEdit.html
+++ b/client/components/userEdit/userEdit.html
@@ -26,7 +26,7 @@
           </div>
         {{/each}}
         <div class="ui fluid action input">
-          <input type="text" name="skills" placeholder="node.js, ruby, python, machine learning, etc...">
+          <input type="text" name="skills" placeholder="node.js, python, machine learning, UX, project management etc...">
           <div class="ui blue button add-skill">Add Skill</div>
         </div>
       </div>
